--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.34.1"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#no-browser"
   }
 }
