--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "whatapp-automation",
+  "name": "whatsapp-automation",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.11.0",
-    "dotenv": "^17.2.2",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#no-browser"
+    "@adiwajshing/baileys": "^6.7.8",
+    "axios": "^1.7.2",
+    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3",
+    "qrcode-terminal": "^0.12.0"
   }
 }
