--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "whatsapp-automation",
+  "name": "whatsapp-birthday-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "scripts": { "start": "node index.js" },
   "dependencies": {
-    "@adiwajshing/baileys": "^6.7.8",
-    "axios": "^1.7.2",
-    "dotenv": "^16.3.1",
-    "node-cron": "^3.0.3",
-    "qrcode-terminal": "^0.12.0"
+    "@adiwajshing/baileys": "*",
+    "qrcode-terminal": "*",
+    "axios": "*",
+    "dotenv": "*",
+    "node-cron": "*"
   }
 }
